
0.32  2014-04-24

0.31  2014-04-23
  - Improved support for pre-encoded BSON documents.

0.30  2014-04-08
  - Removed delete, insert and update methods from Mango.
  - Removed build_delete, build_insert and build_update methods from
    Mango::Protocol.
  - Removed decode_int32, decode_int64, encode_int32 and encode_int64 methods
    from Mango::BSON.
  - Renamed timeout attribute in Mango::Cursor to max_time_ms.
  - Added support for MongoDB 2.6 wire protocol, MongoDB 2.4 is no longer
    supported.
  - Added support for bulk operations.
  - Added max_bson_size and max_write_batch_size attributes to Mango.
  - Added build_write_concern method to Mango::Database.
  - Added bulk method to Mango::Collection.
  - Added write_error method to Mango::Protocol.
  - Added bson_raw function to Mango::BSON.
  - Improved aggregate method in Mango::Collection to return cursors by
    default.
  - Improved aggregate method in Mango::Collection with explain support.
  - Improved connection management with wire protocol version check.
  - Improved Mango::BSON performance.
  - Improved command performance.
  - Improved storage efficiency of Mango::GridFS::Writer by lowering the
    default chunk size to 255KB.

0.24  2014-02-27
  - Added comment and timeout attributes to Mango::Cursor.

0.23  2014-01-22
  - Fixed a few small operator overloading bugs.

0.22  2013-12-18
  - Added options method to Mango::Collection.

0.21  2013-12-04
  - Improved handling of missing files in Mango::GridFS::Reader.

0.20  2013-11-30
  - Added from_string method to Mango.

0.19  2013-11-18
  - Improved Mango::Cursor to allow $query key in queries.

0.18  2013-11-11
  - Fixed concurrency bugs in Mango.
  - Fixed bug in Mango::BSON where all objects that stringify to "1" were
    considered booleans.

0.17  2013-10-30
  - Added cursor and collection support for aggregation.
  - Added add_batch method to Mango::Cursor.
  - Added from_epoch method to Mango::BSON::ObjectID.

0.16  2013-10-12